# django-shoveboxlist

./: .gitignore  LICENSE  README.md  requirements.txt
demo/: db.sqlite3
demo/demo/: settings.py  urls.py
demo/dump/: dumped_data.json
demo/price/: admin.py  forms.py  models.py  urls.py  views.py
demo/price/migrations/: 0001_initial.py  0002_alter_bom_reference.py  0003_alter_bom_level.py  0004_alter_bom_options_remove_bom_reference_bom_article_and_more.py  0005_alter_bom_quantity.py  0006_alter_bom_unit_price.py  0007_alter_bom_description_alter_bom_ref.py
demo/price/templates/price/: base.html  bom_form.html  package_bom.html
demo/shoveboxlist/: apps.py  forms.py  views.py  widgets.py
demo/shoveboxlist/static/shoveboxlist/css/: context-menu.css  shoveboxlist.css
demo/shoveboxlist/static/shoveboxlist/js/: shoveboxlist.js
demo/shoveboxlist/templates/shoveboxlist/widgets/: sbnumberinput.html  (+5 more)
demo/shoveboxlist/templatetags/: shovebox_tags.py
django-shoveboxlist/: LICENSE  MANIFEST.in  README.md  setup.cfg
django-shoveboxlist/shoveboxlist/: renderers.py  widgets.py
django-shoveboxlist/shoveboxlist/static/shoveboxlist/css/: shoveboxlist.css
django-shoveboxlist/shoveboxlist/templates/shoveboxlist/: shovebox.html
django-shoveboxlist/shoveboxlist/templates/shoveboxlist/widgets/: deletecheckbox.html  levelslider.html  sbformulainput.html  sbnumberinput.html  sbtextinput.html
docs/: .~lock.dumped_data.xlsx#  dumped_data.xlsx  markdown-cheat-sheet.md  readme._markmd  readme.md  shoveboxlist.md  shoveboxlist_user.md
docs/images/: dragdrop.pdn
