[metadata]
name = django-shoveboxlist
version = 0.9.2
description = "A Django app delivering a hierarchical widget for formsets"
long_description=open("README.md").read()
long_description_content_type=text/markdown
url=https://github.com/mrklbbrcht/django-shoveboxlist
author = "Mark Libbrecht"
author_email = "m.libbrecht.dev@gmail.com"
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]

include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 2.2 